--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
-  "name": "cypress-junit-azure-devops",
+  "name": "prueba-2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "electron-test": "cypress run",
-    "postelectron-test": "jrm ./results/combined-report.xml \"./results/results-*.xml\"",
-    "script-electron": "npm run electron-test || npm run postelectron-test",
-    "chrome-test": "cypress run --browser chrome --headless",
-    "postchrome-test": "jrm ./results/combined-report.xml \"./results/results-*.xml\"",
-    "script-chrome": "npm run chrome-test || npm run postchrome-test",
-    "firefox-test": "cypress run --browser firefox --headless",
-    "postfirefox-test": "jrm ./results/combined-report.xml \"./results/results-*.xml\"",
-    "script-firefox": "npm run firefox-test || npm run postfirefox-test"
+    "cy:open": "cypress open",
+    "cy:dashboad": "cypress run --record --key 4f4ff287-4c3f-4f4c-adca-a487cdef1d02",
+    "prueba": "cypress run --spec cypress/integration/Test/first_test.js --browser chrome"
   },
-  "keywords": [],
-  "author": "QA BOX LET'S TEST<qaboxletstest@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "cypress": "^8.3.0"
-	
-	
-	
-	
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "junit-report-merger": "^3.0.1"
-  }
+    "cypress": "^8.5.0",
+    "electron-test": "^1.0.0",
+    "junit-report-merger": "^3.0.2"
+  },
+  "dependencies": {},
+  "description": ""
 }
-
-
-
-
-
