--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prueba-2",
-  "version": "1.0.0",
+  "version": "v6.14.15",
   "main": "index.js",
   "scripts": {
     "cy:open": "cypress open",
